package quartaAI.Ristorante2;

public interface Cucinabile {
    void cucina();
}
