package quartaAI.Ristorante2;

public class Cuoco {
    private String nome;
    private String specialita;

    public void preparaPiatto(Piatto piatto) {
        
    }
}
