package quartaAI.Ristorante2;

public class Menu {
    private Piatto[] piatti;
}
